# duckbilledplatypusgo

./: .gitignore  README.md  docker-compose.yml
docker_configs/: local.ini
docker_configs/conf.d/: app.conf  platypus.local.crt  platypus.local.key
inference/: .dockerignore  Dockerfile
inference/app/: main.py  package_model.py  pyproject.toml
old_web/app/: package-lock.json
old_web/app/database/migrations/: 20210319041655-create-articles.js
web/: Dockerfile
web/app/: database.json  package-lock.json  package.json  rollup.config.js  server.js  webpack.mix.js
web/app/app/Http/Controllers/: SearchController.php
web/app/app/Http/Livewire/: Search.php
web/app/database/: connection.js  database.json
web/app/database/migrations/: 2021_03_25_015125_create_articles_table.php  2021_03_28_193937_articles_add_fulltext_index.php
web/app/database/seeders/: ArticlesSeeder.php
web/app/public/: app.js  index.html  manifest.json  mix-manifest.json  site.webmanifest  styles.css
web/app/public/css/: app.css
web/app/public/js/: app.js
web/app/resources/css/: app.css
web/app/resources/js/: app.js  main.js
web/app/resources/js/components/: App.js
web/app/resources/views/: master.blade.php  welcome.blade.php
web/app/resources/views/livewire/: search.blade.php
web/app/routes/: web.php
