[tool.poetry]
name = "oceania-web"
version = "0.1.0"
description = ""
authors = ["jackvial <vialjack@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
fastapi = "^0.63.0"
pydantic = "^1.7.3"
transformers = "^4.3.2"
torch = "^1.7.1"
torchvision = "^0.8.2"
torchaudio = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
